crates/biome_cli/tests/snapshots/main_commands_lint/all_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": { "all": true }
  }
}
```

## `fix.js`

```js
(1 >= -0)
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
fix.js:1:2 lint/suspicious/noCompareNegZero  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Do not use the >= operator to compare against -0.
  
  > 1 │ (1 >= -0)
      │  ^^^^^^^
  
  i Safe fix: Replace -0 with 0
  
    1 │ (1·>=·-0)
      │       -  

```

```block
Checked 1 file(s) in <TIME>
```


