crates/biome_cli/tests/snapshots/main_commands_lint/apply_bogus_argument.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint fix.js --write --unsafe
```

## `fix.js`

```js
function _13_1_3_fun(arguments) { }
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
fix.js:1:22 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of `arguments` as an identifier in strict mode
  
  > 1 │ function _13_1_3_fun(arguments) { }
      │                      ^^^^^^^^^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
