crates/biome_cli/tests/snapshots/main_commands_lint/apply_suggested_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
let a = 4;
debugger;
console.log(a);

```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      `--write --unsafe` is not expected in this context
  


```
