crates/biome_cli/tests/snapshots/main_commands_lint/check_json_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test.json
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDuplicateObjectKeys": "error"
      }
    }
  }
}
```

## `test.json`

```json
{ "foo": true, "foo": true }
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.json:1:3 lint/suspicious/noDuplicateObjectKeys ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key foo was already declared.
  
  > 1 │ { "foo": true, "foo": true }
      │   ^^^^^
  
  i This is where a duplicated key was declared again.
  
  > 1 │ { "foo": true, "foo": true }
      │                ^^^^^
  
  i If a key is defined multiple times, only the last definition takes effect. Previous definitions are ignored.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
