crates/biome_cli/tests/snapshots/main_commands_lint/check_stdin_apply_unsafe_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
function f() {var x=1; return{x}} class Foo {}
```

# Emitted Messages

```block
function f() {const x=1; return{x}} class Foo {}
```


